[package]
name = "server"
version = "0.1.0"
authors = ["Gabriel Gatu <gabriel.dny@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
ws = "*"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
jsonwebtoken = "2.0.3"

r2d2 = "0.8.2"
r2d2_sqlite = "0.5.0"
rusqlite = "0.13.0"

lazy_static = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]